Test coloring various components

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,13 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
-    <h1>CHARTizard</h1>
-    <p>{{data.name[0]}}</p>
+	<h1>CHARTizard</h1>
+	<div class="scatterContainer"></div>
+    <!-- <p>{{data.name[0]}}</p>
     <p>{{data.capture_rate[0]}}</p>
     <p>{{data.base_total[0]}}</p>
     <p>{{dat.name[0]}}</p>
-    <p>{{dat.base_total[0]}}</p>
+    <p>{{dat.base_total[0]}}</p> -->
     
     {% include "scatterplot.html" %}
 
