--- a/templates/tester.html
+++ b/templates/tester.html
@@ -17,10 +17,10 @@
       .x(function(d) { return x(d.date); })
       .y(function(d) { return y(d.close); });
   
-  // append the svg obgect to the body of the page
-  // appends a 'group' element to 'svg'
+  // append the svg2 obgect to the body of the page
+  // appends a 'group' element to 'svg2'
   // moves the 'group' element to the top left margin
-  var svg = d3.select("body").append("svg")
+  var svg2 = d3.select("body").append("svg")
       .attr("width", width + margin.left + margin.right)
       .attr("height", height + margin.top + margin.bottom)
     .append("g")
@@ -41,13 +41,13 @@
     y.domain([0, d3.max(data, function(d) { return d.close; })]);
   
     // Add the valueline path.
-    svg.append("path")
+    svg2.append("path")
         .data([data])
         .attr("class", "line")
         .attr("d", valueline);
         
     // Add the scatterplot
-    svg.selectAll("dot")
+    svg2.selectAll("dot")
         .data(data)
       .enter().append("circle")
         .attr("r", 5)
@@ -55,12 +55,12 @@
         .attr("cy", function(d) { return y(d.close); });
   
     // Add the X Axis
-    svg.append("g")
+    svg2.append("g")
         .attr("transform", "translate(0," + height + ")")
         .call(d3.axisBottom(x));
   
     // Add the Y Axis
-    svg.append("g")
+    svg2.append("g")
         .call(d3.axisLeft(y));
   
   });
