--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,9 @@ h1 {
     stroke: steelblue;
     stroke-width: 2px;
 }
+
+.regressionLine {
+    stroke: rgb(253, 251, 142);
+    fill: none;
+    stroke-width: 2;
+}
