--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 	<title>CHARTizard</title>
 	<link rel="stylesheet" href="../static/css/style.css">
 	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<script src='https://unpkg.com/simple-statistics@7.0.8/dist/simple-statistics.min.js'></script>
 </head>
 <body>
 	<h1>CHARTizard</h1>
