Test filtering data and update README with jpg files instead of pdf files
Test filtering out all pokemon who have capture_rate equal to 120
Attempt to connect Jupyter notebook refactored scripts in CHARTizard.py file with scatterplot.html
	-First attempt to import python file directly into html file
	-Decide more eloquent solution involves connecting through render_template

	-Second attempt: deliver filtered data to index.html with render_template
	-Attempt to access data with appropriate jinja templating syntax
	-Have issues with formatting of filtered data
	-d3's CSV method expects different formatting than filtered data delivered through Jinja
	-Set task to do further research and logistical planning

--- a/templates/scatterplot.html
+++ b/templates/scatterplot.html
@@ -46,6 +46,9 @@ svg.append('text')
 // Get the data and process data within a large function
 d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data) {
 
+	// Test filtering data (remove all pokemon from data that have capture_rate === 120)
+	// data = data.filter(function(d){ return d.capture_rate != "120" })
+
 	// format data
 	data.forEach(function(d) {
 		d.capture_rate = +d.capture_rate;
