Change couple colors and remove PDF files from img folder

--- a/templates/typeColors.html
+++ b/templates/typeColors.html
@@ -1,21 +1,21 @@
 <script>
 let typeColors = {
 	"bug": "#336600",
-	"dark": "#1a001a",
+	"dark": "#622768",
 	"dragon": "#4775d1",
-	"elecric": "#ffcc00",
+	"elecric": "#ffdb4d",
 	"fairy": "#ff66ff",
 	"fighting": "#cc5200",
 	"fire": "#cc3300",
 	"flying": "#6699cc",
-	"ghost": "#660066",
+	"ghost": "#8f0085",
 	"grass": "#00cc00",
-	"ground": "#604020",
+	"ground": "#91663b",
 	"ice": "#ccffff",
 	"normal": "#b3b3b3",
 	"poison": "#cc00ff",
-	"psychic": "#ffff4d",
-	"rock": "#404040",
+	"psychic": "#ccd750",
+	"rock": "#7a7a7a",
 	"steel": "#9494b8",
 	"water": "#3366cc",
 	"": "type1"
