Change Pokemon type colors to set of colors from template on website (link in README)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,10 @@
+html {
+    background-color: lightgray;
+}
+
 h1 {
-    color: chartreuse
+    color: deeppink;
+    text-align: center;
 }
 
 /* .line is used for test2 */
