--- a/templates/scatterplot.html
+++ b/templates/scatterplot.html
@@ -14,7 +14,7 @@ var svg = d3.select(".scatterDiv").append("svg")
 	.attr("width", width + margin.left + margin.right)
 	.attr("height", height + margin.top + margin.bottom)
 	.attr("color", "red")
-	.attr("style", "background-color: lightgray")
+	.attr("style", "background-color: white")
 	.call(responsivefy)
 .append("g")
 	.attr("transform",
