--- a/templates/typeColors.html
+++ b/templates/typeColors.html
@@ -1,23 +1,23 @@
 <script>
 let typeColors = {
-	"bug": "#336600",
-	"dark": "#622768",
-	"dragon": "#4775d1",
-	"elecric": "#ffdb4d",
-	"fairy": "#ff66ff",
-	"fighting": "#cc5200",
-	"fire": "#cc3300",
-	"flying": "#6699cc",
-	"ghost": "#8f0085",
-	"grass": "#00cc00",
-	"ground": "#91663b",
-	"ice": "#ccffff",
-	"normal": "#b3b3b3",
-	"poison": "#cc00ff",
-	"psychic": "#ccd750",
-	"rock": "#7a7a7a",
-	"steel": "#9494b8",
-	"water": "#3366cc",
+	"bug": "#A8B820",
+	"dark": "#705848",
+	"dragon": "#7038F8",
+	"elecric": "#F8D030",
+	"fairy": "#EE99AC",
+	"fighting": "#C03028",
+	"fire": "#F08030",
+	"flying": "#A890F0",
+	"ghost": "#705898",
+	"grass": "#78C850",
+	"ground": "#E0C068",
+	"ice": "#98D8D8",
+	"normal": "#A8A878",
+	"poison": "#A040A0",
+	"psychic": "#F85888",
+	"rock": "#B8A038",
+	"steel": "#B8B8D0",
+	"water": "#6890F0",
 	"": "type1"
 }
 </script>
