--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,3 +13,18 @@ h1 {
     stroke: steelblue;
     stroke-width: 2px;
 }
+
+.scatterplotTooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 100%; /* At the bottom of the tooltip */
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+.scatterDiv {
+    margin-bottom: 50px
+}
