--- a/templates/typeColors.html
+++ b/templates/typeColors.html
@@ -3,7 +3,7 @@ let typeColors = {
 	"bug": "#A8B820",
 	"dark": "#705848",
 	"dragon": "#7038F8",
-	"elecric": "#F8D030",
+	"electric": "#F8D030",
 	"fairy": "#EE99AC",
 	"fighting": "#C03028",
 	"fire": "#F08030",
@@ -18,6 +18,5 @@ let typeColors = {
 	"rock": "#B8A038",
 	"steel": "#B8B8D0",
 	"water": "#6890F0",
-	"": "type1"
 }
 </script>
