--- a/templates/scatterplot.html
+++ b/templates/scatterplot.html
@@ -1,6 +1,6 @@
 <script>
 
-// set dimensions and margins of scatterplot
+// set/calculate variables for dimensions and margins of scatterplot
 var margin = {top: 40, right: 50, bottom: 60, left: 65},
 	width = window.innerWidth - margin.left - margin.right - 30,
 	height = 600 - margin.top - margin.bottom;
@@ -27,45 +27,85 @@ svg.append('text')
 	.style('text-anchor', 'middle')
 	.text('Pokemon Stats Compared')
 
-svg.append('text')
-	.attr("transform", "rotate(-90)")
-	.attr('x', -height / 2)
-	.attr('y', -margin.left / 1.5)
-	.style('font-size', 20)
-	.style('text-anchor', 'middle')
-	.text('Total base stats')
-
-svg.append('text')
-	.attr('x', width / 2)
-	.attr('y', height + margin.bottom / 1.5)
-	.style('font-size', 20)
-	.style('text-anchor', 'middle')
-	.text('Capture rate')
-
 let scatterplotTooltip = d3.select('.scatterDiv').append('div')
 	.attr('class', 'scatterplotTooltip')
 	.style("position", "absolute")
 	.style("opacity", 0)
 	.style("border", "1px solid black")
 	.style("padding", "5px")
-	.style("background-color", "white");
+	.style("background-color", "white")
+	.style("cursor", "default");
+
+let yDropdownLabel = d3.select('.scatterDiv').append('label')
+	.text("Y Variable")
+	.style("position", "absolute")
+	.style("right", (margin.right / 2) + "px")
+	.style("top", (margin.top / 2) + "px")
+
+let yDropdown = yDropdownLabel.append('select')
+	.attr("class", "yDropdown")
+	.style("display", "block")
+
+yDropdown.append('option')
+	.text("base_total")
+	.attr("value", "base_total")
+
+yDropdown.append('option')
+	.text("attack")
+	.attr("value", "attack")
+
+yDropdown.append('option')
+	.text("hp")
+	.attr("value", "hp")
 
 // Get the data and process data within a large function
 d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data) {
 
-	// console.log(data.filter(function(d){ return d.name === "Type: Null"}))
 	// Test filtering data (remove all pokemon from data that have capture_rate === 120)
 	// data = data.filter(function(d){ return d.capture_rate != "120" })
 
-	// format data
+	// format data from strings to numbers
 	data.forEach(function(d) {
 		d.capture_rate = +d.capture_rate;
 		d.base_total = +d.base_total;
+		d.attack = +d.attack;
+		d.defense = +d.defense;
+		d.hp = +d.hp;
+		d.sp_attack = +d.sp_attack;
+		d.sp_defense = +d.sp_defense;
+		d.speed = +d.speed;
+		d.height_m = +d.height_m;
+		d.weight_kg = +d.weight_kg;
 	});
 
+	let xAxisVar = "height_m"
+	let yAxisVar = "base_total"
+
+	// handles y Variable dropdown menu change
+	yDropdown.on("change", function() {
+		console.log(this.value)
+		// e.target.value is the value of the seleted option tag
+		yAxisVar = this.value
+		console.log(yAxisVar)
+		// need to updateyAxisVar to be equal to e.target.value
+		// no filtering needed according to this dropdown menu set of options
+		// need function to exit all currently displayed dots
+		// function to enter all new dots to display
+		exitDots()
+		// function to update points that have entered
+		x.domain([0, d3.max(data, function(d) { return d[xAxisVar]; }) + 5]);
+		y.domain([d3.min(data, function(d) { return d[yAxisVar]; }) - 10, d3.max(data, function(d) { return d[yAxisVar]; }) + 20]);
+		// updatePoints(groupData);
+		enterDots(data)
+		// enterPoints(groupData);
+		// exitPoints(groupData);
+		// var group = e.target.value;
+		// var groupData = getFilteredData(data, group);
+	})
+
 	// Setup domain of data
-	x.domain([0, d3.max(data, function(d) { return d.capture_rate; }) + 5]);
-	y.domain([d3.min(data, function(d) { return d.base_total; }) - 10, d3.max(data, function(d) { return d.base_total; }) + 20]);
+	x.domain([0, d3.max(data, function(d) { return d[xAxisVar]; }) + 5]);
+	y.domain([d3.min(data, function(d) { return d[yAxisVar]; }) - 10, d3.max(data, function(d) { return d[yAxisVar]; }) + 20]);
 	
 	// create defs, linear gradient, and stop elements with appropriate settings
 	var defs = svg.append("defs")
@@ -88,48 +128,73 @@ d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data)
 		}
 	}
 
+	// set scatterplot Tooltip display to none once it is fully transparent for better user experience (fewer issues with hovering over where tooltip text was which causes cursor issues)
 	let hide = function() {scatterplotTooltip.style("display", "none")}
 	let hideHandler
+
+	// formatting x and y axis variables for displaying with Capitalized first letters and no underscores
+	let tempArrX = xAxisVar.split("_")
+	let xAxisVarFormatted = tempArrX[0].charAt(0).toUpperCase() + tempArrX[0].substring(1) + " " + tempArrX[1].charAt(0).toUpperCase() + tempArrX[1].substring(1)
+	let tempArrY = yAxisVar.split("_")
+	let yAxisVarFormatted
+	if (tempArrY.length > 1) {
+		yAxisVarFormatted = tempArrY[0].charAt(0).toUpperCase() + tempArrY[0].substring(1) + " " + tempArrY[1].charAt(0).toUpperCase() + tempArrY[1].substring(1)
+	} else {
+		yAxisVarFormatted = tempArrY[0].charAt(0).toUpperCase() + tempArrY[0].substring(1)
+	}
+
 	// Add all dots for the scatterplot
-	svg.selectAll("dot")
-		.data(data)
-	.enter().append("circle")
-		.on("mouseover", function(d, i) { // show it and update html
-			if (hideHandler) {
-				clearTimeout(hideHandler)
-			}
+	function enterDots(data) {
+		svg.selectAll("dot")
+			.data(data)
+		.enter().append("circle")
+			.on("mouseover", function(d, i) { // show it and update html
+				if (hideHandler) {
+					clearTimeout(hideHandler)
+				}
 
-			let html = "<span class='tooltiptext'>" + "<b>" + d.name + "</b>" + "<br/>" + "Capture Rate: " + d.capture_rate + "<br/>" + "Base Total: " + d.base_total
+				let html = "<span class='tooltiptext'>" + "<b>" + d.name + "</b>" + "<br/>" + xAxisVarFormatted + ": " + d[xAxisVar] + "<br/>" + yAxisVarFormatted + ": " + d[yAxisVar]
 
-			scatterplotTooltip.style("display", "block").html(html)
-				.transition()
-				.duration(500)
-				.style("opacity", .9);
-		})
-		.on("mousemove", function(d, i) {
-			let tempHeight = d3.select(".scatterplotTooltip").node().getBoundingClientRect().height
-			let tempWidth = d3.select(".scatterplotTooltip").node().getBoundingClientRect().width
-			
-			scatterplotTooltip
-				.style("left", (d3.event.pageX - (tempWidth / 2) - 0.5) + "px")
-				.style("top", (d3.event.pageY - tempHeight - 12) + "px");
-		})
-		.on("mouseout", function(d, i) {
-			scatterplotTooltip.transition()
-				.duration(500)
-				.style("opacity", 0)
+				scatterplotTooltip.style("display", "block").html(html)
+					.transition()
+					.duration(500)
+					.style("opacity", .9);
+			})
+			.on("mousemove", function(d, i) {
+				let tempHeight = d3.select(".scatterplotTooltip").node().getBoundingClientRect().height
+				let tempWidth = d3.select(".scatterplotTooltip").node().getBoundingClientRect().width
+				
+				scatterplotTooltip
+					.style("left", (d3.event.pageX - (tempWidth / 2) - 0.5) + "px")
+					.style("top", (d3.event.pageY - tempHeight - 12) + "px");
+			})
+			.on("mouseout", function(d, i) {
+				scatterplotTooltip.transition()
+					.duration(500)
+					.style("opacity", 0)
 
-			hideHandler = setTimeout(hide, 550)
+				hideHandler = setTimeout(hide, 550)
+			})
+			.attr("r", 5)
+			.attr("cx", function(d) { return x(d[xAxisVar]); })
+			.attr("cy", function(d) { return y(d[yAxisVar]); })
+			.attr("fill", function(d) {
+				if (d.type2 === "") {
+					return typeColors[d.type1]
+				}
+				return "url(#" + d.type1 + d.type2 + ")"
 		})
-		.attr("r", 5)
-		.attr("cx", function(d) { return x(d.capture_rate); })
-		.attr("cy", function(d) { return y(d.base_total); })
-		.attr("fill", function(d) {
-			if (d.type2 === "") {
-				return typeColors[d.type1]
-			}
-			return "url(#" + d.type1 + d.type2 + ")"
-		})
+	}
+
+	enterDots(data)
+
+	function exitDots() {
+		svg.selectAll("circle")
+			.data([])
+			.exit()
+			.remove();
+	}
+
 
 	// Add x Axis
 	svg.append("g")
@@ -141,12 +206,12 @@ d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data)
 		.call(d3.axisLeft(y));
 
 	// Regression line
-	linearRegression = ss.linearRegression(data.map(d => [d.capture_rate, d.base_total]))
+	linearRegression = ss.linearRegression(data.map(d => [d[xAxisVar], d[yAxisVar]]))
 
 	linearRegressionLine = ss.linearRegressionLine(linearRegression)
 
-	const firstX = d3.min(data, function(d) { return d.capture_rate; });
-	const lastX = d3.max(data, function(d) { return d.capture_rate; });
+	const firstX = d3.min(data, function(d) { return d[xAxisVar]; });
+	const lastX = d3.max(data, function(d) { return d[xAxisVar]; });
 	const xCoordinates = [firstX, lastX];
 	
 	// these x and y keys coordinate with the line variable below
@@ -166,5 +231,19 @@ d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data)
 		.attr('stroke', 'rgb(253, 251, 142)')
 		.attr('stroke-width', 2);
 
+	svg.append('text')
+		.attr("transform", "rotate(-90)")
+		.attr('x', -height / 2)
+		.attr('y', -margin.left / 1.5)
+		.style('font-size', 20)
+		.style('text-anchor', 'middle')
+		.text(yAxisVarFormatted)
+
+	svg.append('text')
+		.attr('x', width / 2)
+		.attr('y', height + margin.bottom / 1.5)
+		.style('font-size', 20)
+		.style('text-anchor', 'middle')
+		.text(xAxisVarFormatted)
 });
 </script>
